--- a/src/assets/css/components.css
+++ b/src/assets/css/components.css
@@ -389,7 +389,7 @@ h3.boxed {
     border-radius: 5px;
 }
 .eidtor-img.active{
-    border: 4px solid #1d2b64;
+    border: 1px dashed #1d2b64;
     border-radius: 5px;
     padding: 5px 10px;
     position: relative;
@@ -1311,10 +1311,6 @@ form.button-from.mt-2 select.form-select {
         position: relative;
         margin: 0px 0px 15px;
     }
-    /* .eidtor-img.active {
-        border: 2px solid #195cc5;
-        border-radius: 5px;
-        /* padding: 5px 5px; */
     } 
     button.button.btn-success {
         background: #198754 !important;
@@ -1793,4 +1789,62 @@ svg.shape.shapea {
     align-items: center;
     padding-top: 8px;
     font-size: 20px;
+}
+
+
+.eidtor-img {
+    border: 1px dashed #959292;
+    border-radius: 5px;
+    padding: 5px 10px;
+    position: relative;
+    box-shadow: 0 3px 4px #00000029, 0 5px 20px #0000003b;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+.main-div1:hover{
+    color: #23abd4;
+} 
+
+.main-div1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    transition: 0.3s;
+}
+.main-div1:hover .edit-section{
+    border-top: 1px dashed  #23abd4;
+   
+}
+.main-div1:hover .edit-section1 {
+    border-top: 1px dashed  #23abd4;
+}
+.edit-section {
+    border-top: 1px dashed #000;
+    padding-top: 20px;
+    margin-top: 30px;
+    padding-bottom: 13px;
+    width: 40%;
+}
+.edit-section1 {
+    border-top: 1px dashed #000;
+    padding-top: 20px;
+    margin-top: 30px;
+    padding-bottom: 13px;
+    width: 38%;
+}
+.main-div1:hover h1 {
+    color:  #23abd4;
+}
+.main-div1 h1 {
+    font-size: 20px;
+    color: #000000;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 600;
+}
+.main-div1 h1 i {
+    font-size: 20px;
+ font-size: 20px;
 }
